Introduce JavaModule, refactor module graph construction
 #KT-18598 In Progress
 #KT-18599 In Progress